# terminal-bank

./: .gitignore  AGENTS.md  temp_keypair.json
onchain/: Anchor.toml  bankctmPh48C5GYqDh62SRAEq5QAxdBh3wDAqApuv5v.json  package.json  run_isolated.sh
onchain/migrations/: deploy.ts  initializeMint.ts
onchain/tests/: deposit.ts  externalTransfer.ts  internalTransfer.ts  onchain.ts  withdraw.ts
relay_api/: .mocharc.json  codama.json  package.json  pnpm-lock.yaml  tsconfig.json
relay_api/src/: config.ts  constants.ts  index.ts
relay_api/tests/: deposit.test.ts  initializeAccount.test.ts  transfer.test.ts  utils.ts  withdraw.test.ts
terminal/: CMakeLists.txt  PROJECT_OVERVIEW.md
terminal/src/: main.cpp
terminal/src/infra/database/: SQLiteWrapper.cpp  SQLiteWrapper.hpp
terminal/src/infra/relay/: RelayAPIClient.cpp  RelayAPIClient.hpp
terminal/src/models/: Account.hpp  User.hpp
terminal/src/services/: DatabaseService.cpp  DatabaseService.hpp  RelayService.cpp  RelayService.hpp
terminal/src/tui/components/: GlobalWrapper.cpp  GlobalWrapper.hpp  MainLayout.cpp  MainLayout.hpp
terminal/src/tui/screens/: CreateBankAccountScreen.cpp  CreateBankAccountScreen.hpp  DemoTestScreen.cpp  DemoTestScreen.hpp  DepositWithdrawScreen.cpp  DepositWithdrawScreen.hpp  ExternalTransferScreen.cpp  ExternalTransferScreen.hpp  HomeScreen.cpp  HomeScreen.hpp  InternalTransferScreen.cpp  InternalTransferScreen.hpp  WelcomeScreen.cpp  WelcomeScreen.hpp
terminal/src/utils/: Base58.cpp  Base58.hpp  ConfigManager.hpp  SolanaUtils.cpp  SolanaUtils.hpp
(+55 files in other folders)
